<resources>
    <string name="app_name">ShiftLog</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Submit_shift">Submit Shift</string>
    <string name="submit_shift">Submit Shift</string>
    <string name="start_shift">Start Shift</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="salary_earned">Salary Earned:</string>
    <string name="home">Home</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)</string>
    <string name="hourly_wage">Hourly Wage</string>
    <string name="select_month">Select Month:</string>
    <string name="yyyy_mm">YYYY-MM</string>
    <string name="select_month_and_year">Select month and year</string>
    <string name="monthly_salary">Monthly Salary:</string>
    <string name="net_income">Net income</string>
    <string name="days_worked_0" />
    <string name="salary_gained_0_00" />
    <string name="_00_00_00">00:00:00</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="pay_management">Pay Management</string>
    <string name="logout">Logout</string>
    <string name="account_info">Account Info</string>
    <string name="wage_rate">Wage Rate</string>
    <string name="save">Save</string>
    <string name="the_user">The User</string>
    <string name="hourly_wage_0_00">Hourly Wage: $0.00</string>
    <string name="full_name">Full Name:</string>
    <string name="other_deductions">Other Deductions:</string>
    <string name="other_deductions_amount">Other deductions amount</string>
    <string name="net_income1">Net Income:</string>
    <string name="calculate_net_income">Calculate Net Income</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="export_data_to_pdf_format">Export data to PDF format</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="export_data_to_excel_format">Export data to Excel format</string>
    <string name="pension_amount">Pension amount</string>
    <string name="tax_amount">Tax amount</string>
    <string name="enter_bonuses_amount">Enter bonuses amount</string>
    <string name="enter_deductions_amount">Enter deductions amount</string>
    <string name="monthly_salary1">Monthly Salary</string>


</resources>