<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Main content container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/white">

            <!-- Month Picker -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select_month"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:textColor="@android:color/black"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/monthPickerInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/yyyy_mm"
                    android:padding="12dp"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none" />
            </LinearLayout>

            <!-- Monthly Salary Input -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/monthly_salary"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/monthlySalaryInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autofillHints=""
                    android:textColor="@android:color/black"
                    android:hint="@string/monthly_salary1"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:enabled="false"/>
            </LinearLayout>

            <!-- Deductions Input -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Deductions:"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/deductionsInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autofillHints=""
                    android:hint="@string/enter_deductions_amount"
                    android:inputType="numberDecimal"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Bonuses Input -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Bonuses:"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/bonusesInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autofillHints=""
                    android:hint="@string/enter_bonuses_amount"
                    android:inputType="numberDecimal"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Tax Display -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Tax:"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:textColor="@android:color/black"
                    android:gravity="start"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/taxInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autofillHints=""
                    android:hint="@string/tax_amount"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:enabled="false"/>
            </LinearLayout>

            <!-- Pension Display -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Pension:"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:textColor="@android:color/black"
                    android:gravity="start"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/pensionInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/pension_amount"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:enabled="false"/>
            </LinearLayout>

            <!-- Other Deductions Display -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/other_deductions"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:textColor="@android:color/black"
                    android:gravity="start"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/otherDeductionsInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/other_deductions_amount"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:enabled="false"/>
            </LinearLayout>

            <!-- Net Income Display -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/net_income1"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:textColor="@android:color/black"
                    android:gravity="start"
                    android:paddingEnd="16dp"/>

                <EditText
                    android:id="@+id/netIncomeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/net_income"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:enabled="false"/>
            </LinearLayout>

            <!-- Calculate Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/calculateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_net_income"
                android:layout_marginTop="20dp" />

            <!-- Export Buttons -->
            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exportPdfButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/export_to_pdf"
                    android:backgroundTint="#B71C1C"
                    android:textColor="@android:color/white"
                    android:contentDescription="@string/export_data_to_pdf_format"
                    android:layout_marginEnd="8dp" />  <!-- Add margin to create gap -->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exportExcelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/export_to_excel"
                    android:backgroundTint="#2E7D32"
                    android:textColor="@android:color/white"
                    android:contentDescription="@string/export_data_to_excel_format"
                    android:layout_marginStart="8dp" />  <!-- Optional, to create additional margin on both sides -->
            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
