<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Email input field -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Password input field -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/emailInput"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Login button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/passwordInput"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Register button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="16dp"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <!-- Forgot Password link -->
    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="#0277BD" />
</RelativeLayout>
