<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Date Navigation Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/previousDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&lt;" />

        <TextView
            android:id="@+id/selectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:text="Date" />

        <Button
            android:id="@+id/nextDayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&gt;" />
    </LinearLayout>

    <!-- CardView for Start Time Input -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <EditText
            android:id="@+id/startTimeInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:minHeight="48dp"
            android:hint="@string/start_time"
            android:inputType="time"
            android:padding="12dp"
            android:textSize="16sp"
            android:background="@android:color/transparent" />

    </androidx.cardview.widget.CardView>

    <!-- CardView for End Time Input -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <EditText
            android:id="@+id/endTimeInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:minHeight="48dp"
            android:hint="@string/end_time"
            android:inputType="time"
            android:padding="12dp"
            android:textSize="16sp"
            android:background="@android:color/transparent" />

    </androidx.cardview.widget.CardView>


    <!-- Timer TextView -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="00:00:00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"/>

    <!-- FloatingActionButton for Starting Shift -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startShiftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_timer"
        android:contentDescription="@string/start_shift"
        app:fabSize="normal"
        app:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="src_in"/>

    <!-- Button to Submit Shift -->
    <Button
        android:id="@+id/submitShiftButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/submit_shift"
        android:textAllCaps="false"
        android:padding="12dp"
        android:textSize="16sp"
        android:elevation="2dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button" />

</LinearLayout>
